<resources>
    <string name="app_name">安全驾驶</string>
    <!-- Strings related to login -->
    <string name="title_activity_security_question">设置密保</string>
    <string name="server_error">服务器错误</string>
    <string name="password_error">密码错误</string>
    <string name="non_existent_name">不存在该用户名</string>
    <string name="login_success">登陆成功</string>
    <string name="down_avator_fail">头像加载失败</string>
    <string name="loging">登陆中</string>
    <string name="name_no_empty">用户名不能为空</string>
    <string name="password_no_empty">密码不能为空</string>
    <string name="enter_name">请输入用户名</string>
    <string name="submit">提交</string>
    <string name="searching">查询中</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="enter_password">请输入密码</string>
    <string name="auto_login">自动登陆</string>
    <string name="login">登陆</string>
    <string name="sign_up">注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="enter_new_pass">请输入新密码</string>
    <string name="comfirm_new_pass">确认新密码</string>
    <!-- Strings related to sign_up -->
    <string name="sign_up_success">注册成功</string>
    <string name="name_has_exist">已存在该用户名</string>
    <string name="pushing_info">提交信息中</string>
    <string name="pass_no_same">两次密码不一致</string>
    <string name="pass_length_short">密码长度至少为8</string>
    <string name="pass_format_error">密码必须且只能由数字和字母组成</string>
    <string name="ERROR">ERROR</string>
    <string name="OK">OK</string>
    <string name="enter_user_name">请输入您想注册的用户名</string>
    <string name="enter_pass_again">请重复密码</string>
    <string name="title_activity_main">安全驾驶</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_startpage">startpage</string>

    <string name="title_activity_setting">设置</string>
    <string name="get_data_fail">获取数据失败</string>
    <string name="no_set">未设置</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="modify_fail">修改失败</string>
    <string name="modify_success">修改成功</string>
    <string name="upload_fail">上传到服务器失败</string>
    <string name="pic_big">图片大小不能超过2MB</string>
    <string name="upload_file_fail">文件上传发生错误</string>
    <string name="pic_type_error">不支持的图片扩展名</string>
    <string name="file_error">无正确的文件上传</string>
    <string name="get_avator_fail">加载头像失败</string>
    <string name="get_avator_success">加载头像失败</string>
    <string name="set_avator_fail">设置头像失败</string>
    <string name="uploading_avator">上传头像中</string>
    <string name="modify_sign">修改个性签名(50字符以内)</string>
    <string name="modify_sex">您的性别是？</string>
    <string name="modify_qq">修改QQ号码</string>
    <string name="modfy_phone">修改手机号码</string>
    <string name="getting_data">获取信息中</string>
    <string name="user_name">用户名</string>
    <string name="mail">邮箱</string>
    <string name="id">学号</string>
    <string name="phone">手机号</string>
    <string name="qq">QQ</string>
    <string name="sex">性别</string>
    <string name="score">积分</string>
    <string name="sign">个性签名</string>
    <string name="hobby">兴趣</string>
    <string name="no_book">没有查询到这本书 请检查ISBN是否正确</string>
    <string name="exit">退出登录</string>


</resources>
