<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckCode"
    >

    <LinearLayout
        android:id="@+id/part1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="visible"
        >
        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="验证码已发送到"
            />

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_in_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/VerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="请输入您收到的验证码"
                android:maxLength="4"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:textSize="14dp"
                />

            <Button
                android:id="@+id/SendVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:text="重新发送"
                android:textSize="14dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/submit"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/part2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/enter_new_pass"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/comfirm_new_pass"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            />
    </LinearLayout>

</LinearLayout>