<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/backup"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/backup" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:text="设置"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

    </LinearLayout>
    <ScrollView android:background="#ffffff"
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0,1"
            android:weightSum="1">
            <LinearLayout
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="头像"
                    android:textSize="18dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:gravity="right">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/avator"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@android:drawable/sym_def_app_icon" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/LightGrey"  />

            <TableRow
                android:id="@+id/nickname"
                android:clickable="true"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/user_name"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:textSize="18dp" />
            </TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/LightGrey"  />
            <TableRow
                android:id="@+id/mail_all"
                android:clickable="true"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mail"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:textSize="18dp" />
            </TableRow>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/LightGrey"  />
            <!--<View-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="1px"-->
                <!--android:background="@color/LightGrey"  />-->
            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"/>
        </TableLayout>
    </ScrollView>
</LinearLayout>


